# generic-system-monitor

./: Cargo.toml  LICENSE.md  README.md  Rocket.toml
src/: common.rs  dashboard.rs  main.rs  observer.rs
static/: dashboard.html  observers.html  style.css
